# vulkan

./: build.sh  stack.yaml  vulkan.cabal
generate/: generate.cabal  stack.yaml
generate/src/Parse/: Type.hs
generate/src/Spec/: Graph.hs  Partition.hs
generate/src/Write/: BreakCycle.hs  Command.hs  CycleBreak.hs  Module.hs  Quirks.hs  Spec.hs  Utils.hs  Vertex.hs  Wrapper.hs  WriteMonad.hs
generate/src/Write/Type/: Bitmask.hs  Define.hs  Struct.hs
src/Graphics/: Vulkan.hs
src/Graphics/Vulkan/: Buffer.hs  BufferView.hs  CommandBuffer.hs  CommandBufferBuilding.hs  CommandPool.hs  Constants.hs  Core.hs  DescriptorSet.hs  Device.hs  DeviceInitialization.hs  Event.hs  ExtensionDiscovery.hs  Fence.hs  Image.hs  ImageView.hs  LayerDiscovery.hs  Memory.hs  MemoryManagement.hs  OtherTypes.hs  Pass.hs  Pipeline.hs  PipelineCache.hs  PipelineLayout.hs  Query.hs  Queue.hs  QueueSemaphore.hs  Raw.hs  Sampler.hs  Shader.hs  SparseResourceMemoryManagement.hs
src/Graphics/Vulkan/EXT/: DebugMarker.hs  DebugReport.hs
src/Graphics/Vulkan/KHR/: Display.hs  DisplaySwapchain.hs  Surface.hs  Swapchain.hs
src/Graphics/Vulkan/Raw/: Buffer.hs  BufferView.hs  CommandBuffer.hs  CommandBufferBuilding.hs  CommandPool.hs  Constants.hs  Core.hs  DescriptorSet.hs  Device.hs  Device.hs-boot  DeviceInitialization.hs  Event.hs  ExtensionDiscovery.hs  Fence.hs  Image.hs  ImageView.hs  LayerDiscovery.hs  Memory.hs  MemoryManagement.hs  OtherTypes.hs  Pass.hs  Pass.hs-boot  Pipeline.hs  PipelineCache.hs  PipelineLayout.hs  Query.hs  Queue.hs  QueueSemaphore.hs  Sampler.hs  Shader.hs  SparseResourceMemoryManagement.hs  Version.hs
src/Graphics/Vulkan/Raw/AMD/: GcnShader.hs  RasterizationOrder.hs  ShaderExplicitVertexParameter.hs  ShaderTrinaryMinmax.hs
src/Graphics/Vulkan/Raw/EXT/: DebugMarker.hs  DebugReport.hs
src/Graphics/Vulkan/Raw/IMG/: FilterCubic.hs
src/Graphics/Vulkan/Raw/KHR/: Display.hs  DisplaySwapchain.hs  SamplerMirrorClampToEdge.hs  Surface.hs  Swapchain.hs
src/Graphics/Vulkan/Raw/NV/: GlslShader.hs
