name:                vulkan
version:             1.7.0.0
synopsis:            Bindings to the Vulkan graphics API.
description:         Please see readme.md
homepage:            http://github.com/expipiplus1/vulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          live.long.and.prosper@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Graphics
build-type:          Simple
extra-source-files:  readme.md,
                     changelog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Vulkan.Raw
                     , Graphics.Vulkan.Raw.Buffer
                     , Graphics.Vulkan.Raw.BufferView
                     , Graphics.Vulkan.Raw.CommandBuffer
                     , Graphics.Vulkan.Raw.CommandBufferBuilding
                     , Graphics.Vulkan.Raw.CommandPool
                     , Graphics.Vulkan.Raw.Constants
                     , Graphics.Vulkan.Raw.Core
                     , Graphics.Vulkan.Raw.DescriptorSet
                     , Graphics.Vulkan.Raw.Device
                     , Graphics.Vulkan.Raw.DeviceInitialization
                     , Graphics.Vulkan.Raw.EXT.DebugReport
                     , Graphics.Vulkan.Raw.Event
                     , Graphics.Vulkan.Raw.ExtensionDiscovery
                     , Graphics.Vulkan.Raw.Fence
                     , Graphics.Vulkan.Raw.Image
                     , Graphics.Vulkan.Raw.ImageView
                     , Graphics.Vulkan.Raw.KHR.Display
                     , Graphics.Vulkan.Raw.KHR.DisplaySwapchain
                     , Graphics.Vulkan.Raw.KHR.Surface
                     , Graphics.Vulkan.Raw.KHR.Swapchain
                     , Graphics.Vulkan.Raw.LayerDiscovery
                     , Graphics.Vulkan.Raw.Memory
                     , Graphics.Vulkan.Raw.MemoryManagement
                     , Graphics.Vulkan.Raw.OtherTypes
                     , Graphics.Vulkan.Raw.Pass
                     , Graphics.Vulkan.Raw.Pipeline
                     , Graphics.Vulkan.Raw.PipelineCache
                     , Graphics.Vulkan.Raw.PipelineLayout
                     , Graphics.Vulkan.Raw.Query
                     , Graphics.Vulkan.Raw.Queue
                     , Graphics.Vulkan.Raw.QueueSemaphore
                     , Graphics.Vulkan.Raw.Sampler
                     , Graphics.Vulkan.Raw.Shader
                     , Graphics.Vulkan.Raw.SparseResourceMemoryManagement
                     , Graphics.Vulkan.Raw.Version
  build-depends:       base >= 4.9 && < 5
                     , vector-sized >= 0.1 && < 0.4
  extra-libraries:     vulkan
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/vulkan
